--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^5.0.16",
+    "axios": "^1.7.7",
     "express": "^4.21.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
